# django-subprocess-view

./: README.md  db.sqlite3  pyproject.toml  requirements.in  requirements.txt
config/: settings.py  urls.py
subprocess_view/: apps.py  urls.py  views.py
