[build-system]
requires = ['setuptools>=61.0.0']
build-backend = 'setuptools.build_meta'


[project]
name = "django-subprocess-view"
version = "0.0.0"
authors = [{ name = "Rami", email = "ramiboutas@protonmail.com" }]
description = "An app for a superuser to run subprocess commands in a Django project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: Django",
  "Framework :: Django :: 4",
]

dependencies = [ "django"]

[tool.setuptools]

packages = ["subprocess_view"]

[project.urls]
"Homepage" = "https://github.com/ramiboutas/django-subprocess-view"
"Bug Tracker" = "https://github.com/ramiboutas/django-subprocess-view/issues"


[tool.coverage.run]
branch = true
omit = ["tests/*", "manage.py", "config/*"]


[tool.coverage.paths]
source = ["subprocess_view/"]
